--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>DeepZoo</h1>
 							<p>Learn. Create. Share</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Read Our Whitepaper</a></li>
 							</ul>
 						</div>
 					</section>
