--- a/index.html
+++ b/index.html
@@ -86,17 +86,16 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>DeepZoo is a virtual laboratory in which students, developers and entrepreneurs work collaboratively to build useful and accessible artificial intelligence applications.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<spaFast Track</h3>
+									<p>The DZ-DAO is Modeled on the MPCR lab, an open-access AI training and development laboratory that has allowed hundreds of students, across all backgrounds and levels of experience, to 'skip the line' and work collaboratively to use the latest AI tools to solve real-world problems. </p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Tokenized Governance</h3>
+									<p>Community members can stake Zoo Token to participate in DeepZoo governance. </p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
