--- a/index.html
+++ b/index.html
@@ -99,23 +99,23 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Learn by Doing</h3>
+									<p>Work on real projects that have meaning. Share you creativity and creations with the world.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Learn to Earn</h3>
+									<p>Participate in community projects to earn Zoo Token.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>NFT Royalties on Shared Content</h3>
+									<p>Trained the best model ever? Have a new data generator? Collect income from your contributions in perpetuity.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Let Your Voice Be Heard</h3>
+									<p>Join a community of like minded thinkers and doers who want to change the world.</p>
 								</section>
 							</div>
 							<ul class="actions">
