--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 							<p>DeepZoo is a virtual laboratory in which students, developers and entrepreneurs work collaboratively to build useful and accessible artificial intelligence applications.</p>
 							<div class="features">
 								<section>
-									<spaFast Track</h3>
+									<span class="icon solid major fa-lock"></span>
+									<h3>Fast Track</h3>
 									<p>The DZ-DAO is Modeled on the MPCR lab, an open-access AI training and development laboratory that has allowed hundreds of students, across all backgrounds and levels of experience, to 'skip the line' and work collaboratively to use the latest AI tools to solve real-world problems. </p>
 								</section>
 								<section>
