--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>DeepZoo</h1>
-							<p>Learn. Create. Share</p>
+							<p>Learn. Create. Share. Own</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Read Our Whitepaper</a></li>
 							</ul>
