--- a/testindex.html
+++ b/testindex.html
@@ -48,8 +48,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Learn.</h2>
-									<p>Level up with skills you need to succeed in AI, Blockchain and Metaverse.</p>
+									<h2>What is DeepZoo?</h2>
+									<p>DeepZoo is a community of learners, dreamers, and builders working together to build the next generation of AI-powered software through shared ownership .</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -60,8 +60,8 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Create</h2>
-									<p>Join a community of learners, dreamers, and builders in developing the next generation of AI-powered software.</p>
+									<h2>How does DeepZoo work?</h2>
+									<p>DeepZoo represents a radically differnt model of how people can work together to build awesome stuff based on shared ownership of a distributed autonomous oragnization (DAO)</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -72,8 +72,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Share</h2>
-									<p>Push your projects out to the DeepZoo Arcade where anyone can acess and use them.</p>
+									<h2>How do I get involved in DeepZoo?</h2>
+									<p>Ready to join the next revolution in AI creation? Push your projects out to the DeepZoo Arcade where anyone can acess and use them.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
