--- a/testindex.html
+++ b/testindex.html
@@ -49,7 +49,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>What is DeepZoo?</h2>
-									<p>DeepZoo is a community of learners, dreamers, and builders working together to build the next generation of AI-powered software through shared ownership .</p>
+									<p>DeepZoo is a community of learners, dreamers, and builders working together to bring the next generation of AI-powered software to the world .</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -61,7 +61,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>How does DeepZoo work?</h2>
-									<p>DeepZoo represents a radically differnt model of how people can work together to build awesome stuff based on shared ownership of a distributed autonomous oragnization (DAO)</p>
+									<p>DeepZoo represents a radically differnt model of how people can work together to build awesome stuff based on shared ownership of a distributed autonomous oragnization(DAO)</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -72,8 +72,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>How do I get involved in DeepZoo?</h2>
-									<p>Ready to join the next revolution in AI creation? Push your projects out to the DeepZoo Arcade where anyone can acess and use them.</p>
+									<h2>How can I get involved in DeepZoo?</h2>
+									<p>Ready to join the next revolution in AI creation? We have the tools, tutorials and mentors to get you creating. .</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
