--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
+		
+			<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
+                    <link rel="apple-touch-icon-precomposed" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
+                                   <link rel="shortcut icon" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
+		
+		
+		
 	</head>
+	
+	
+
+	
+	
 	<body class="is-preload">
 
 		<!-- Sidebar -->
