--- a/index.html
+++ b/index.html
@@ -11,22 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		
-		
-			<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
-                    <link rel="apple-touch-icon-precomposed" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
-                                   <link rel="shortcut icon" href="https://github.com/williamedwardhahn/DeepZooWeb/raw/main/images/elephant.png">
-		
-		
-		
 	</head>
-	
-	
-
-	
-	
 	<body class="is-preload">
 
 		<!-- Sidebar -->
@@ -35,9 +20,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#one">What is DeepZoo</a></li>
+							<li><a href="#two">How does DeepZoo work?</a></li>
+							<li><a href="#three">How can I join DeepZoo?</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -63,8 +48,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Accelerate Your Life.</h2>
-									<p>Level up with the skills you need to succeed.</p>
+									<h2>What is DeepZoo?</h2>
+									<p>DeepZoo is a community of learners, dreamers, and builders working together to bring the next generation of AI-powered software to the world .</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -75,8 +60,8 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Next Generation Tech</h2>
-									<p>Join a community of learners, dreamers, and builders. From beginner to expert DeepZoo Workshop has all the tools you need for your future success.</p>
+									<h2>How does DeepZoo work?</h2>
+									<p>DeepZoo represents a radically differnt model of how people can work together to build awesome stuff based on shared ownership of a distributed autonomous oragnization(DAO)</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -87,8 +72,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>AI, Blockchain, Metaverse</h2>
-									<p>Get involved with the technology revolutions changing our planet in the DeepZoo Arcade.</p>
+									<h2>How can I get involved in DeepZoo?</h2>
+									<p>Ready to join the next revolution in AI creation? We have the tools, tutorials and mentors to get you creating. .</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
