--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">What is DeepZoo</a></li>
-							<li><a href="#two">How does DeepZoo work?</a></li>
-							<li><a href="#three">How can I join DeepZoo?</a></li>
+							<li><a href="#one">Who we are</a></li>
+							<li><a href="#two">What we do</a></li>
+							<li><a href="#three">Get in Touch</a></li>
 						</ul>
 					</nav>
 				</div>
