--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 
 
 <html>
-	<head>
-		<title>DeepZoo</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
+<head>
+<title>DeepZoo</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+<link rel="stylesheet" href="assets/css/main.css" />
+<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+	
+	
 	<body class="is-preload">
 
 		<!-- Sidebar -->
@@ -71,8 +73,8 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Information for Investors</h2>
-							<p>DeepZoo is a privately held corporation headquartered in Boca Raton, Florida. The company is currently in a seed-stage startup, seeking limited funding for market analysis and prototype development.</p>
+							<h2>Investors</h2>
+							<p>DeepZoo is a privately held corporation headquartered in Boca Raton, Florida.</p>
 							<div class="features">
 								
 							</div>
@@ -112,8 +114,8 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
+											<span>3398 FAU Boulevard <br/>
+											Boca Raton, FL 33431<br />
 											USA</span>
 										</li>
 										<li>
