--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- One -->
 <section id="one" class="wrapper style2 spotlights">
 <section>
-<a href="#" class="image"><img src="images/Dashboard.png" alt="" data-position="center center" /></a>
+<a href="#" class="image"><img src="images/Blue_Space.png" alt="" data-position="center center" /></a>
 <div class="content">
 <div class="inner">
 <h2>Customer Analytics</h2>
