--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 	
-	
 <body class="is-preload">
 
 <!-- Sidebar -->
@@ -26,10 +25,7 @@
 </div>
 </section>
 
-		
-		
-		
-		
+	
 		
 <!-- Wrapper -->
 <div id="wrapper">
@@ -38,11 +34,12 @@
 <section id="intro" class="wrapper style1 fullscreen fade-up">
 <div class="inner">
 <h1>DeepZoo</h1>
-<p></p>Business Insight, Powered by AI
+<p>Artificial Intelligent</p> 
 
 </div>
 </section>
-
+	
+<!--
 <!-- One -->
 <section id="one" class="wrapper style2 spotlights">
 <section>
@@ -95,7 +92,7 @@
 </section>
 
 				
-				
+-->				
 
 <!-- Three -->
 <section id="three" class="wrapper style1 fade-up">
