--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section id="intro" class="wrapper style1 fullscreen fade-up">
 <div class="inner">
 <h1>DeepZoo</h1>
-<p>Artificial Intelligence</p> 
+<p>We Bring AI to Life</p> 
 
 </div>
 </section>
