--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section id="intro" class="wrapper style1 fullscreen fade-up">
 <div class="inner">
 <h1>DeepZoo</h1>
-<p>Bringing AI to Life</p> 
+<p>Artifical Intelligence, Brought to Life</p> 
 
 </div>
 </section>
@@ -29,13 +29,10 @@
 <!-- Three -->
 <section id="three" class="wrapper style1 fade-up">
 <div class="inner">
-<h2>Get in touch</h2>
+<h2>Contact Us</h2>
 <div class="split style1">
 	
-														
-	
-	
-	
+
 	
 <section>
 <ul class="contact">
@@ -50,13 +47,9 @@ USA</span>
 <a href="#">user@untitled.tld</a>
 </li>
 <li>
-<h3>Phone</h3>
-<span>(000) 000-0000</span>
 </li>
 <li>
-	
-
-	
+		
 	
 
 </section>
