--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-<title>DeepZoo</title>
+<title>Deep Zoo</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 <!-- Intro -->
 <section id="intro" class="wrapper style1 fullscreen fade-up">
 <div class="inner">
-<h1>DeepZoo</h1>
+<h1>Deep Zoo</h1>
 <p>Artifical Intelligence, Brought to Life</p> 
 
 </div>
@@ -44,12 +44,12 @@ USA</span>
 </li>
 <li>
 <h3>Email</h3>
-<a href="#">user@untitled.tld</a>
+<a href="mailto:info@deepzoo.com">info@deepzoo.com</a>
 </li>
 <li>
-</li>
-<li>
-		
+<h3>Phone</h3>
+<a href="tel:+15618267327">+1 (561) 826-7327</a>
+</li>	
 	
 
 </section>
@@ -69,7 +69,7 @@ USA</span>
 <footer id="footer" class="wrapper style1-alt">
 <div class="inner">
 <ul class="menu">
-<li> DeepZoo 2022. All rights reserved.</li>
+<li> Deep Zoo, Inc 2022. All rights reserved.</li>
 </ul>
 </div>
 </footer>
