--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section id="intro" class="wrapper style1 fullscreen fade-up">
 <div class="inner">
 <h1>Deep Zoo</h1>
-<p>Artifical Intelligence, Brought to Life</p> 
+<p>Artificial Intelligence, Brought to Life</p> 
 
 </div>
 </section>
